package com.g4.odontohub.estoque.domain.event;

import com.g4.odontohub.estoque.domain.model.InstrumentoId;

public record InstrumentoVencido(InstrumentoId instrumentoId, String nome) {}