package com.g4.odontohub.estoque.domain.model;

public record InstrumentoId(Long id) {}