package com.g4.odontohub.estoque.domain.model;

public enum StatusEsterilizacao {
    ESTERIL, CONTAMINADO, VENCIDO
}